--- a/templates/home.html
+++ b/templates/home.html
@@ -2349,7 +2349,7 @@
                 <p class="hero-subtitle">Build your dream online store, share your referral link, and turn your skills into cash, all from your phone or laptop.</p>
             <div class="hero-cta">
                 {% if user.is_authenticated %}
-                    <a href="{% url 'create_store' store.slug %}" class="btn btn-primary">
+                    <a href="{% url 'create_store' %}" class="btn btn-primary">
                         <i class="fas fa-rocket"></i>
                         Create your Website Now Easily
                     </a>
